reorganize test source location, eliminate most of root pom.xml and some other contents to simplify

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -45,8 +45,8 @@
         <extensionName>javax.el</extensionName>
         <bundle.symbolicName>com.sun.el.javax.el</bundle.symbolicName>
         <vendorName>Oracle Corporation</vendorName>
-        <findbugs.version>2.4.0</findbugs.version>
-        <findbugs.exclude />
+        <findbugs.version>2.5.2</findbugs.version>
+        <findbugs.exclude>exclude.xml</findbugs.exclude>
         <findbugs.threshold>High</findbugs.threshold>
     </properties>
 
@@ -80,6 +80,20 @@
         <tag>HEAD</tag>
     </scm>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+	    <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.1-b08</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <resources>
